<resources>
    <string name="app_name">IT</string>
    <string name="start_motivation_text">Для меня долгое время было загадкой, как что-то очень дорогое и технологичное может быть столь бесполезным.
                                        И вскоре я осознал, что компьютер — это глупая машина, обладающая способностями выполнять невероятно умные вещи,
                                        тогда как программисты — это умные люди, у которых талант делать невероятные глупости. Короче, они нашли друг друга.
                                                                     Bill Bryson</string>
    <string name="start">НАЧАТЬ</string>
    <string name="empty_string"> </string>
    <string name="startbutton">start</string>
    <string name="todo">TODO</string>
    <string name="startAndExit">Когда начинать и заканчивать тестирование</string>
    <string name="startAndExitText">Вспомним график стоимости дефектов:

                                                kogda_nachinat_testirovanie

                                                Как видим, чем позже дефект был обнаружен, тем дороже обойдется его исправление и тем больше усилий для этого потребуется.
                                                Кроме того, как мы помним, дефекты, заложенные в систему на ранних уровнях проектирования особенно коварны – их трудно отследить и правильно интерпретировать.
                                                Вывод напрашивается сам собой: чем раньше в жизненном цикле программы начнется тестирование, тем в большей степени мы можем быть уверены в ее качестве.
                                                Большинство специалистов сходятся в мысли, что тестирование нужно начинать еще на этапе составления требований к системе.
                                                Хотя тут все будет зависеть от выбранной модели разработки (о них мы поговорим чуть позже).
                                                К примеру, в каскадной модели тестирование проводится на специально выделенном для него этапе.
                                                Итерационная же модель позволяет осуществлять тестирование практически параллельно с разработкой нового функционала.
                                                На разных этапах жизненного цикла ПО тестирование проводится в разных формах:

                                                    – на этапе определения требований: их анализ и верификация также могут считаться тестированием;
                                                    – контроль процесса проектирования на этапе разработки дизайна системы – это тоже форма тестирования;
                                                    – как уже упоминалось, разработчики тоже участвуют в тестировании на уровне модульного тестирования.

                                                Труднее определить критерий окончания тестирования, поскольку, согласно принципам тестирования, мы никогда не можем быть уверены в том, что программа на 100% свободна от дефектов.
                                                Поэтому используются другие условия:
                                                    1. граничные сроки, установленные заранее;
                                                    2. выполнение всех предусмотренных тест-кейсов;
                                                    3. достижение определенного уровня тестового покрытия;
                                                    4. когда после определенного момента, мы практически не находим новых багов или критических дефектов;
                                                    5. решение менеджмента.</string>
    <string name="costOfDefects">Сколько стоят дефекты</string>
    <string name="costOfDefectsText">           Здесь все просто: чем раньше мы найдем дефект, тем дешевле нам обойдется его исправление.
                                                Понятно, что исправить строчку в спецификации или коде проще и дешевле, чем вносить изменения в готовый продукт.
                                                Не говоря уже о ситуации, когда дефект находит заказчик или конечный пользователь – здесь может пострадать репутация компании-разработчика, а такие убытки с трудом поддаются подсчету.
                                                Общую тенденцию отображает график:

                                                kogda_nachinat_testirovanie

                                                Со временем, стоимость исправлений возрастает, в то время как влияние участников проекта на процесс разработки постепенно уменьшается.
                                                В крайнем случае, если серьезный дефект обнаруживается на поздних этапах разработки, он может остаться неисправленным, поскольку стоимость внесения изменений может оказаться слишком высокой.
                                                Кроме того, даже если готовая программа будет соответствовать спецификации, заказчик все равно может отказаться ее принимать, если сама спецификация была неправильной.
                                                Проектная команда могла разработать в точности то, что было описано в требованиях, но если требования были истолкованы неправильно, заказчика результат не устроит.</string>
    <string name="TestingPrinciples">Принципы тестирования</string>
    <string name="TestingPrinciplesText">Тестирование программного обеспечения – креативная и интеллектуальная работа. Разработка правильных и эффективных тестов – достаточно непростое занятие. Принципы тестирования, представленные ниже, были разработаны в последние 40 лет и являются общим руководством для тестирования в целом.</string>
    <string name="TestingPrinciplesText1">1. Тестирование показывает наличие дефектов. Тестирование может показать наличие дефектов в программе, но не доказать их отсутствие. Тем не менее, важно составлять тест-кейсы, которые будут находить как можно больше багов. Таким образом, при должном тестовом покрытии, тестирование позволяет снизить вероятность наличия дефектов в программном обеспечении. В то же время, даже если дефекты не были найдены в процессе тестирования, нельзя утверждать, что их нет.</string>
    <string name="TestingPrinciplesText2">2. Исчерпывающее тестирование невозможно. Невозможно провести исчерпывающее тестирование, которое бы покрывало все комбинации пользовательского ввода и состояний системы, за исключениям совсем уж примитивных случаев. Вместо этого необходимо использовать анализ рисков и расстановку приоритетов, что позволит более эффективно распределять усилия по обеспечению качества ПО.</string>
    <string name="TestingPrinciplesText3">3. Раннее тестирование. Тестирование должно начинаться как можно раньше в жизненном цикле разработки программного обеспечения, и его усилия должны быть сконцентрированы на определенных целях.</string>
    <string name="TestingPrinciplesText4">4. Скопление дефектов. Разные модули системы могут содержать разное количество дефектов – то есть, плотность скопления дефектов в разных элементах программы может отличаться. Усилия по тестированию должны распределяться пропорционально фактической плотности дефектов. В основном, большую часть критических дефектов находят в ограниченном количестве модулей. Это проявление принципа Парето: 80% проблем содержатся в 20% модулей.</string>
    <string name="TestingPrinciplesText5">5. Парадокс пестицида. Прогоняя одни и те же тесты вновь и вновь, Вы столкнетесь с тем, что они находят все меньше новых ошибок. Поскольку система эволюционирует, многие из ранее найденных дефектов исправляют и старые тест-кейсы больше не срабатывают. Чтобы преодолеть этот парадокс, необходимо периодически вносить изменения в используемые наборы тестов, рецензировать и корректировать их с тем, чтобы они отвечали новому состоянию системы и позволяли находить как можно большее количество дефектов.</string>
    <string name="TestingPrinciplesText6">6. Тестирование зависит от контекста. Выбор методологии, техники и типа тестирования будет напрямую зависеть от природы самой программы. Например, программное обеспечение для медицинских нужд требует гораздо более строгой и тщательной проверки, чем, скажем, компьютерная игра. Из тех же соображений, сайт с большой посещаемостью должен пройти через серьезное тестирование производительности, чтобы показать возможность работы в условиях высокой нагрузки.</string>
    <string name="TestingPrinciplesText7">7. Заблуждение об отсутствии ошибок. Тот факт, что тестирование не обнаружило дефектов, еще не значит, что программа готова к релизу. Нахождение и исправление дефектов будут не важны, если система окажется неудобной в использовании, и не будет удовлетворять ожиданиям и потребностям пользователя.</string>
    <string name="TestingPrinciplesText8">И еще несколько важных принципов:</string>
    <string name="TestingPrinciplesText8_1">— тестирование должно производиться независимыми специалистами;</string>
    <string name="TestingPrinciplesText8_2">— привлекайте лучших профессионалов;</string>
    <string name="TestingPrinciplesText8_3">— тестируйте как позитивные, так и негативные сценарии;</string>
    <string name="TestingPrinciplesText8_4">— не допускайте изменений в программе в процессе тестирования;</string>
    <string name="TestingPrinciplesText8_5">— указывайте ожидаемый результат выполнения тестов.</string>
</resources>