<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5C5282A0"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="qa1.QA1_13">

    <ImageView
        android:id="@+id/themes_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:background="@drawable/ic_logojhtext"
        android:contentDescription="@string/empty_string"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="@id/themes_image"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/qa_view_1_13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:background="#00FFFFFF"
            android:elegantTextHeight="true"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:shadowColor="@color/shadow"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/TestingPrinciples"
            android:textAlignment="center"
            android:textColor="#154177"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            android:transitionName="example_transition1_13"
            app:autoSizeTextType="uniform"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,NestedWeights" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1_13_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText1"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText2"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText3"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText4"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText5"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText6"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText7"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText8"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText8_1"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText8_2"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText8_3"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText8_4"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView1_13_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:shadowColor="@color/shadow"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/TestingPrinciplesText8_5"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>